--- a/4b/package.json
+++ b/4b/package.json
@@ -22,7 +22,8 @@
   "devDependencies": {
     "eslint": "^8.51.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "testEnvironment": "node"
