Part5 - add endpoint for resetting the database when run in test env

--- a/4cd/Dockerfile
+++ b/4cd/Dockerfile
@@ -2,4 +2,5 @@ FROM node:18-alpine
 RUN apk add --no-cache bash curl && curl -L https://fly.io/install.sh | sh
 WORKDIR /app
 COPY . .
-CMD \[ -d "node_modules" \] && npm run dev || npm install && npm run dev
+#CMD \[ -d "node_modules" \] && npm run dev || npm install && npm run dev
+CMD \[ -d "node_modules" \] && npm run start:test || npm install && npm run start:test
